--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Mitch Hansen</title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -15,13 +15,13 @@
               <div class="nav-sub">
                 <ul>
                   <li>
-                    <a href="#" class="nav-item">About</a>
+                    <a href="#about-section" class="nav-item">About</a>
                   </li>
                   <li>
-                    <a href="#" class="nav-item">Programming Skills</a>
+                    <a href="#programming-skills-section" class="nav-item">Programming Skills</a>
                   </li>
                   <li>
-                    <a href="#" class="nav-item">Projects</a>
+                    <a href="#projects-section" class="nav-item">Projects</a>
                   </li>
                   <li>
                     <a href="#" class="nav-item">Contact</a>
@@ -29,7 +29,7 @@
                 </ul>
               </div>
             </div>
-          <a href="#" class="nav-name">MITCH HANSEN</a>
+          <a href="#nav" class="nav-name">MITCH HANSEN</a>
         </li>
       </ul>
       </div>
@@ -37,24 +37,50 @@
 
   <div class="main-body">
     <div class="about-me">
-      <h1>Mitch Hansen</h1>
-      <h3>Computer Science Undergraduate</h3>
-      <h5>Santa Clara University</h5>
+      <div class="about-text">
+        <h1 class="name">MITCH HANSEN</h1>
+        <h3 class="degree">Computer Science Undergraduate</h3>
+        <h5 class="school">Santa Clara University</h5>
+      </div>
     </div>
+
     <div class="text-center" style="margin:20px">
 
     </div>
+
+    <!--<h1 style="text-align: center;">ABOUT</h1>-->
     <div class="about">
-        <h1 style="text-align: center;">ABOUT</h1>
-        <img src="img/profile-pic.jpeg" width="200" class="profile-pic">
-      <!--<span style="display:inline-block; width: 20;"></span>-->
-        <p class="para">Lorem ipsum dolor sit amet, nibh quas malorum nec eu, vix quodsi aperiam ut. Id sea prima exerci dignissim, pri et tempor salutandi concludaturque, iisque evertitur democritum cu has. Id insolens phaedrum tincidunt sit. Eu oratio commune necessitatibus eum. Ex quo everti apeirian, eum assum definitionem te. Ea mea saperet liberavisse, cu possit cetero vituperatoribus est. An vix tantas invidunt, in unum denique voluptatum vix, quo cu partiendo splendide.</p>
+      <a id="about-section"> </a>
+        <img src="img/profile-pic.jpeg" width="200" class="profile-pic" style="float: left">
+        <p class="para1">Lorem ipsum dolor sit amet, nibh quas malorum nec eu, vix quodsi aperiam ut. Id sea prima exerci dignissim, pri et tempor salutandi concludaturque, iisque evertitur democritum cu has. Id insolens phaedrum tincidunt sit. Eu oratio commune necessitatibus eum. Ex quo everti apeirian, eum assum definitionem te. Ea mea saperet liberavisse, cu possit cetero vituperatoribus est. An vix tantas invidunt, in unum denique voluptatum vix, quo cu partiendo splendide.</p>
     </div>
-    <div class="programming-skills">
-        <h1 style="text-align: center;">PROGRAMMING SKILLS</h1>
-        <img src="img/" width="200" class="profile-pic">
-        <p class="para">Lorem ipsum dolor sit amet, nibh quas malorum nec eu, vix quodsi aperiam ut. Id sea prima exerci dignissim, pri et tempor salutandi concludaturque, iisque evertitur democritum cu has. Id insolens phaedrum tincidunt sit. Eu oratio commune necessitatibus eum. Ex quo everti apeirian, eum assum definitionem te. Ea mea saperet liberavisse, cu possit cetero vituperatoribus est. An vix tantas invidunt, in unum denique voluptatum vix, quo cu partiendo splendide.</p>
+
+    <div class="programming-skills" style="padding-top: 10px; padding-bottom: 100px" >
+        <div class="prog-background">
+          <a id="programming-skills-section"> </a>
+          <h1 style="text-align: center;">PROGRAMMING SKILLS</h1>
+        </div>
+        <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium. Cras sit amet eros laoreet, pharetra velit in, pellentesque tellus. Etiam lobortis sollicitudin ex nec aliquam. Fusce in tincidunt ligula. In lacinia aliquam lacinia. Quisque vehicula finibus tincidunt. Duis interdum feugiat lorem, id lacinia lorem efficitur eu. Sed commodo rutrum felis, nec aliquam sem facilisis ac. Donec sit amet pretium ipsum, eu aliquet risus. Ut eu viverra lorem. Suspendisse potenti. Pellentesque a volutpat neque. Praesent scelerisque vulputate sem non pulvinar. Praesent ultricies felis consectetur, aliquet nulla ut, finibus nisl. Donec vel suscipit diam. Pellentesque consectetur ante dolor. Donec iaculis ullamcorper urna, sed rutrum neque porttitor non. Phasellus risus arcu, laoreet id tellus volutpat, dapibus rhoncus mauris. Duis libero diam, porttitor at nibh sit amet, consectetur lobortis est. Sed semper, sapien eleifend consequat dictum, turpis justo sodales diam, in tincidunt dui mi et tortor. Fusce nec congue massa. Vestibulum ut finibus tortor. Mauris ut libero sit amet est egestas commodo eget et nisi. Sed elementum, odio sed facilisis luctus, nunc elit dignissim odio, sed aliquam urna massa sit amet dolor. Etiam mollis consequat metus, et molestie ante lacinia ac. Etiam rhoncus libero vel pharetra ornare. Aliquam in sem ut ante porttitor aliquet. In semper neque vel placerat bibendum.
+        </p>
+        <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium. Cras sit amet eros laoreet, pharetra velit in, pellentesque tellus. Etiam lobortis sollicitudin ex nec aliquam. Fusce in tincidunt ligula. In lacinia aliquam lacinia. Quisque vehicula finibus tincidunt. Duis interdum feugiat lorem, id lacinia lorem efficitur eu. Sed commodo rutrum felis, nec aliquam sem facilisis ac. Donec sit amet pretium ipsum, eu aliquet risus. Ut eu viverra lorem. Suspendisse potenti. Pellentesque a volutpat neque. Praesent scelerisque vulputate sem non pulvinar. Praesent ultricies felis consectetur, aliquet nulla ut, finibus nisl. Donec vel suscipit diam. Pellentesque consectetur ante dolor. Donec iaculis ullamcorper urna, sed rutrum neque porttitor non. Phasellus risus arcu, laoreet id tellus volutpat, dapibus rhoncus mauris. Duis libero diam, porttitor at nibh sit amet, consectetur lobortis est. Sed semper, sapien eleifend consequat dictum, turpis justo sodales diam, in tincidunt dui mi et tortor. Fusce nec congue massa. Vestibulum ut finibus tortor. Mauris ut libero sit amet est egestas commodo eget et nisi. Sed elementum, odio sed facilisis luctus, nunc elit dignissim odio, sed aliquam urna massa sit amet dolor. Etiam mollis consequat metus, et molestie ante lacinia ac. Etiam rhoncus libero vel pharetra ornare. Aliquam in sem ut ante porttitor aliquet. In semper neque vel placerat bibendum.
+        </p>
     </div>
+
+    <div class="projects" id="project-section">
+      <h1 style="text-align: center;">PROJECTS</h1>
+      <a id="project-section"> </a>
+      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium. Cras sit amet eros laoreet, pharetra velit in, pellentesque tellus. Etiam lobortis sollicitudin ex nec aliquam. Fusce in tincidunt ligula. In lacinia aliquam lacinia. Quisque vehicula finibus tincidunt. Duis interdum feugiat lorem, id lacinia lorem efficitur eu. Sed commodo rutrum felis, nec aliquam sem facilisis ac. Donec sit amet pretium ipsum, eu aliquet risus. Ut eu viverra lorem. Suspendisse potenti. Pellentesque a volutpat neque. Praesent scelerisque vulputate sem non pulvinar. Praesent ultricies felis consectetur, aliquet nulla ut, finibus nisl. Donec vel suscipit diam. Pellentesque consectetur ante dolor. Donec iaculis ullamcorper urna, sed rutrum neque porttitor non. Phasellus risus arcu, laoreet id tellus volutpat, dapibus rhoncus mauris. Duis libero diam, porttitor at nibh sit amet, consectetur lobortis est. Sed semper, sapien eleifend consequat dictum, turpis justo sodales diam, in tincidunt dui mi et tortor. Fusce nec congue massa. Vestibulum ut finibus tortor. Mauris ut libero sit amet est egestas commodo eget et nisi. Sed elementum, odio sed facilisis luctus, nunc elit dignissim odio, sed aliquam urna massa sit amet dolor. Etiam mollis consequat metus, et molestie ante lacinia ac. Etiam rhoncus libero vel pharetra ornare. Aliquam in sem ut ante porttitor aliquet. In semper neque vel placerat bibendum.
+      </p>
+      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium. Cras sit amet eros laoreet, pharetra velit in, pellentesque tellus. Etiam lobortis sollicitudin ex nec aliquam. Fusce in tincidunt ligula. In lacinia aliquam lacinia. Quisque vehicula finibus tincidunt. Duis interdum feugiat lorem, id lacinia lorem efficitur eu. Sed commodo rutrum felis, nec aliquam sem facilisis ac. Donec sit amet pretium ipsum, eu aliquet risus. Ut eu viverra lorem. Suspendisse potenti. Pellentesque a volutpat neque. Praesent scelerisque vulputate sem non pulvinar. Praesent ultricies felis consectetur, aliquet nulla ut, finibus nisl. Donec vel suscipit diam. Pellentesque consectetur ante dolor. Donec iaculis ullamcorper urna, sed rutrum neque porttitor non. Phasellus risus arcu, laoreet id tellus volutpat, dapibus rhoncus mauris. Duis libero diam, porttitor at nibh sit amet, consectetur lobortis est. Sed semper, sapien eleifend consequat dictum, turpis justo sodales diam, in tincidunt dui mi et tortor. Fusce nec congue massa. Vestibulum ut finibus tortor. Mauris ut libero sit amet est egestas commodo eget et nisi. Sed elementum, odio sed facilisis luctus, nunc elit dignissim odio, sed aliquam urna massa sit amet dolor. Etiam mollis consequat metus, et molestie ante lacinia ac. Etiam rhoncus libero vel pharetra ornare. Aliquam in sem ut ante porttitor aliquet. In semper neque vel placerat bibendum.
+      </p>
+      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium. Cras sit amet eros laoreet, pharetra velit in, pellentesque tellus. Etiam lobortis sollicitudin ex nec aliquam. Fusce in tincidunt ligula. In lacinia aliquam lacinia. Quisque vehicula finibus tincidunt. Duis interdum feugiat lorem, id lacinia lorem efficitur eu. Sed commodo rutrum felis, nec aliquam sem facilisis ac. Donec sit amet pretium ipsum, eu aliquet risus. Ut eu viverra lorem. Suspendisse potenti. Pellentesque a volutpat neque. Praesent scelerisque vulputate sem non pulvinar. Praesent ultricies felis consectetur, aliquet nulla ut, finibus nisl. Donec vel suscipit diam. Pellentesque consectetur ante dolor. Donec iaculis ullamcorper urna, sed rutrum neque porttitor non. Phasellus risus arcu, laoreet id tellus volutpat, dapibus rhoncus mauris. Duis libero diam, porttitor at nibh sit amet, consectetur lobortis est. Sed semper, sapien eleifend consequat dictum, turpis justo sodales diam, in tincidunt dui mi et tortor. Fusce nec congue massa. Vestibulum ut finibus tortor. Mauris ut libero sit amet est egestas commodo eget et nisi. Sed elementum, odio sed facilisis luctus, nunc elit dignissim odio, sed aliquam urna massa sit amet dolor. Etiam mollis consequat metus, et molestie ante lacinia ac. Etiam rhoncus libero vel pharetra ornare. Aliquam in sem ut ante porttitor aliquet. In semper neque vel placerat bibendum.
+      </p>
+      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium. Cras sit amet eros laoreet, pharetra velit in, pellentesque tellus. Etiam lobortis sollicitudin ex nec aliquam. Fusce in tincidunt ligula. In lacinia aliquam lacinia. Quisque vehicula finibus tincidunt. Duis interdum feugiat lorem, id lacinia lorem efficitur eu. Sed commodo rutrum felis, nec aliquam sem facilisis ac. Donec sit amet pretium ipsum, eu aliquet risus. Ut eu viverra lorem. Suspendisse potenti. Pellentesque a volutpat neque. Praesent scelerisque vulputate sem non pulvinar. Praesent ultricies felis consectetur, aliquet nulla ut, finibus nisl. Donec vel suscipit diam. Pellentesque consectetur ante dolor. Donec iaculis ullamcorper urna, sed rutrum neque porttitor non. Phasellus risus arcu, laoreet id tellus volutpat, dapibus rhoncus mauris. Duis libero diam, porttitor at nibh sit amet, consectetur lobortis est. Sed semper, sapien eleifend consequat dictum, turpis justo sodales diam, in tincidunt dui mi et tortor. Fusce nec congue massa. Vestibulum ut finibus tortor. Mauris ut libero sit amet est egestas commodo eget et nisi. Sed elementum, odio sed facilisis luctus, nunc elit dignissim odio, sed aliquam urna massa sit amet dolor. Etiam mollis consequat metus, et molestie ante lacinia ac. Etiam rhoncus libero vel pharetra ornare. Aliquam in sem ut ante porttitor aliquet. In semper neque vel placerat bibendum.
+      </p>
+      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium. Cras sit amet eros laoreet, pharetra velit in, pellentesque tellus. Etiam lobortis sollicitudin ex nec aliquam. Fusce in tincidunt ligula. In lacinia aliquam lacinia. Quisque vehicula finibus tincidunt. Duis interdum feugiat lorem, id lacinia lorem efficitur eu. Sed commodo rutrum felis, nec aliquam sem facilisis ac. Donec sit amet pretium ipsum, eu aliquet risus. Ut eu viverra lorem. Suspendisse potenti. Pellentesque a volutpat neque. Praesent scelerisque vulputate sem non pulvinar. Praesent ultricies felis consectetur, aliquet nulla ut, finibus nisl. Donec vel suscipit diam. Pellentesque consectetur ante dolor. Donec iaculis ullamcorper urna, sed rutrum neque porttitor non. Phasellus risus arcu, laoreet id tellus volutpat, dapibus rhoncus mauris. Duis libero diam, porttitor at nibh sit amet, consectetur lobortis est. Sed semper, sapien eleifend consequat dictum, turpis justo sodales diam, in tincidunt dui mi et tortor. Fusce nec congue massa. Vestibulum ut finibus tortor. Mauris ut libero sit amet est egestas commodo eget et nisi. Sed elementum, odio sed facilisis luctus, nunc elit dignissim odio, sed aliquam urna massa sit amet dolor. Etiam mollis consequat metus, et molestie ante lacinia ac. Etiam rhoncus libero vel pharetra ornare. Aliquam in sem ut ante porttitor aliquet. In semper neque vel placerat bibendum.
+      </p>
+    </div>
+
   </div>
 
 </body>
