--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Mitch Hansen</title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/home-style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="apple-touch-icon" sizes="57x57" href="img/flav/apple-icon-57x57.png">
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="wrapper">
     <nav>
       <div class="logo"><a href="#">MITCH HANSEN</a></div>
@@ -61,41 +62,36 @@
       <a id="about-sec"> </a>
     </div>
 
-    <div class="text-center" style="margin:20px">
-
-    </div>
-    <!--<h1 style="text-align: center;">ABOUT</h1>-->
     <div class="about">
         <img src="img/profile-pic.jpeg" width="200" class="profile-pic" style="float: left">
+        <p class="para1">Welcome to my website. I am a Seattle native, currently attending Santa Clara University in the Silicon Valley as a rising sophomore and computer science undergraduate. Over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! I fell in love with computer science and just couldn’t get enough, so I am always looking for a new project to dive into or a new language to explore.</p>
         <a id="prog"></a>
-        <p class="para1">Welcome to my website. I am a Seattle native, currently attending Santa Clara University in the Silicon Valley as a rising sophomore computer science undergraduate. Over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! I fell in love with computer science and just couldn’t get enough, so I am always looking for a new project to dive into.</p>
     </div>
-
-    <div class="programming-skills"  >
+    <div class="programming-skills">
         <div class="prog-background">
           <h1 style="text-align: center; padding-bottom: 50px; letter-spacing: 15px;" >PROGRAMMING SKILLS</h1>
         </div>
         <div class="row">
           <div class="column">
             <h2 style="text-align: center;">C++ & Java</h2>
-            <p class="para-prog">I have two years’ experience in Java and C++, building countless applications and programs to solve diverse tasks. Using object-oriented programming and data structures.</p>
+            <p class="para-prog">I have two years’ experience in Java and C++, building programs to solve diverse tasks.</p>
           </div>
 
           <div class="column">
             <h2 style="text-align: center;">Object-Oriented Programming & Data Structures</h2>
-            <p class="para-prog"> Whether that be implementing my own queue, stack, linked-list, or dynamic array to work with any data type, or comparing the efficiency and runtimes of numerous sorting algorithms and data structures to use the best one for any given situation. I can do it.</p>
+            <p class="para-prog">Through classes at school I have gained an extensive knowledge in various Data Structures and Object-Oriented programming techniques.</p>
           </div>
         </div>
 
         <div class="row">
           <div class="column">
-            <h2 style="text-align: center;">C# & Python</h2>
-            <p class="para-prog"> To try something new I decided to dive into some light python and C#. Creating Discord bots and writing a roguelike console game to learn these new languages.</p>
+            <h2 style="text-align: center;">C#, Python, & Other Languages</h2>
+            <p class="para-prog">I'm always trying to dabble in new languages to see what they're capable of.</p>
           </div>
 
           <div class="column">
             <h2 style="text-align: center;">Web Development</h2>
-            <p class="para-prog">This very website before you is an example of the web development skills I posses using HTML, CSS, and a touch of JavaScript.</p>
+            <p class="para-prog">This very website before you is an example of the web development skills I posses using HTML, CSS, and JavaScript. I also plan on developing websites for other friends.</p>
           </div>
         </div>
         <a id="proj"></a>
@@ -106,25 +102,27 @@
       <div class="row">
         <div class="column">
           <h2 style="text-align: center;">C# RogueLike Game</h2>
-          <p class="para-prog"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium.</p>
+          <p class="para-prog"> In order to learn a new language, I chose to learn C# through making a game. You can find my full C# game made through a tutorial on my github.</p>
+          <p class="para-prog"> <a href="https://github.com/mitchahan/Roguelike-Game-CSharp" rel="noopener noreferrer" target="_blank">The Repository</a> | <a href="https://roguesharp.wordpress.com/" rel="noopener noreferrer" target="_blank">RogueSharp Tutorial</a></p>
         </div>
 
         <div class="column">
-          <h2 style="text-align: center;">Discord Bot & Chrome Extension</h2>
-          <p class="para-prog"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum semper in enim eu sodales. Morbi in mi pharetra ipsum mollis pretium.</p>
+          <h2 style="text-align: center;">Discord Bot</h2>
+          <p class="para-prog">To practice work with API's I created a Discord Bot using the Reddit and Discord API as well as a politcally charged Chrome Extension</p>
+          <p class="para-prog"> <a href="https://github.com/mitchahan/DiscordBots" rel="noopener noreferrer" target="_blank">Discord Bot</a> | <a href="https://github.com/mitchahan/Chrome-Extension-Donald-Replacer" rel="noopener noreferrer" target="_blank">Chrome Extension</a></p>
         </div>
       </div>
     </div>
 
     <div class="contact" style="text-align: center;">
-      <h1 style="text-align: center; letter-spacing: 15px;" id="contact">CONTACT</h1>
-      <a href="https://www.facebook.com/mitchames99" rel="noopener noreferrer" target="_blank" class="fa fa-facebook"></a>
-      <a href="https://twitter.com/mitch_ames" rel="noopener noreferrer" target="_blank" class="fa fa-twitter"></a>
-      <a href="https://www.instagram.com/mitch_ames/" rel="noopener noreferrer" target="_blank" class="fa fa-instagram"></a>
+      <a href="contact.html" style="text-decoration: none; color: #fff;"><h1 style="text-align: center; letter-spacing: 15px;" id="contact">CONTACT</h1></a>
+      <a href="https://stackexchange.com/users/13408684/mitch-hansen" rel="noopener noreferrer" target="_blank" class="fa fa-stack-overflow"></a>
       <a href="https://www.linkedin.com/in/mitchahan/" rel="noopener noreferrer" target="_blank" class="fa fa-linkedin"></a>
       <a href="https://github.com/mitchahan" rel="noopener noreferrer" target="_blank" class="fa fa-github"></a>
-      <p class="contact-p"> Email me for inquiries, projects, or other random stuff! <p>
-      <p class="contact-p"> mitchames@live.com <p>
+      <a href="https://www.facebook.com/mitchames99" rel="noopener noreferrer" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/mitch_ames" rel="noopener noreferrer" target="_blank" class="fa fa-twitter"></a>
+      <p class="contact-p">Email me for inquiries or other random stuff! <p>
+      <p class="contact-p">mitchames@live.com <p>
     </div>
 
   </div>
