js file separation

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -23,19 +23,6 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-
-    <script type="text/javascript">
-      $(window).on('scroll', function() {
-        if ($(window).scrollTop()) {
-          $('nav').addClass('black');
-        } else {
-          $('nav').removeClass('black');
-        }
-      })
-    </script>
-
-
 </head>
 
 <body>
@@ -64,7 +51,7 @@
 
     <div class="about">
         <img src="img/profile-pic.jpeg" width="200" class="profile-pic" style="float: left">
-        <p class="para1">Welcome to my website. I am a Seattle native, currently attending Santa Clara University in the Silicon Valley as a rising sophomore and computer science undergraduate. Over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! I fell in love with computer science and just couldn’t get enough, so I am always looking for a new project to dive into or a new language to explore.</p>
+        <p class="para1">Welcome to my website. I am a Seattle native, currently attending Santa Clara University in the Silicon Valley as a rising sophomore and computer science undergraduate. Over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! I fell in love with computer science and just couldn’t get enough, so I am always looking for a new project to dive into or a new concept to explore.</p>
         <a id="prog"></a>
     </div>
     <div class="programming-skills">
@@ -127,6 +114,8 @@
 
   </div>
 
+  <script type="text/text/javascript" src="js/script.js"></script>
 
 </body>
+
 </html>
