Media Query for Tablets Done
Next: navbar turns to hamburger icon, text blocks for project and programming go 100% width each (Mobile Media Query)

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
 
   <body>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <div class="wrapper">
       <nav>
-        <div class="logo"><a href="#">MITCH HANSEN</a></div>
+        <div class="logo"><a href="#"><h1>MITCH HANSEN</h1></a></div>
         <ul>
           <li><a href="#about-sec">About</a></li>
           <li><a href="#prog">Programming</a></li>
@@ -38,7 +39,7 @@
           <li><a href="#contact-header">Contact</a></li>
         </ul>
       </nav>
-
+    </div>
       <div class="main-body">
         <div class="about-me">
           <div class="about-text">
@@ -50,8 +51,8 @@
         </div>
 
         <div class="about">
-          <img src="img/profile-pic.jpeg" width="200" class="profile-pic">
-          <p class="para1">Welcome to my website. I am a Seattle native, currently attending Santa Clara University in the Silicon Valley as a rising sophomore and computer science undergraduate. Over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! I fell in love with computer science and just couldn’t get enough, so I am always looking for a new project to dive into or a new concept to explore.</p>
+          <div class="profile-pic"> <img src="img/profile-pic.jpeg"> </div>
+          <div class="profile-desc"> <p class="para1">Welcome to my website. I am a Seattle native, currently attending Santa Clara University in the Silicon Valley as a rising sophomore and computer science undergraduate. Over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! I fell in love with computer science and just couldn’t get enough, so I am always looking for a new project to dive into or a new concept to explore.</p> </div>
           <a id="prog"></a>
         </div>
 
