Media Query Phone Done
Could be a little buggy at points, CSS overhaul needed, otherwise functional

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="wrapper">
       <nav>
         <div class="logo"><a href="#"><h1>MITCH HANSEN</h1></a></div>
+        <a class="burger-nav"> </a>
         <ul>
           <li><a href="#about-sec">About</a></li>
           <li><a href="#prog">Programming</a></li>
@@ -116,6 +117,8 @@
 
       </div>
 
+      <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script type="text/javascript" src="js/menu.js"></script>
       <script type="text/javascript" src="js/script.js"></script>
 
     </body>
