Minor responsive/styling changes, added Resume

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="utf-8">
   </head>
 
   <body>
@@ -38,6 +38,7 @@
           <li><a href="#prog">Programming</a></li>
           <li><a href="#proj">Projects</a></li>
           <li><a href="#contact-header">Contact</a></li>
+          <li><a href="./pdf/Hansen Mitchell Resume Color.pdf" target="blank_">R&eacute;sum&eacute;</a></li>
         </ul>
       </nav>
     </div>
